# xege

./: .clangd  .gitattributes  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  PRD.md  README.md  RELEASE.md  build_commands.bat  cup.toml  dev.cmake.example  ege.h  generate_docs.sh  index.html  tasks.sh
.github/: copilot-instructions.md
.github/release-assets/: CMakeLists.txt  README.md  WORKFLOW_USAGE.md
.github/workflows/: MSVC2019.yml  macos-build.yml  mingw-build.yml  mingw-crosscompile-build.yml  mingw-windows-build.yml  msvc-build.yml  pages-build-deployment.yml  pages.yml  release.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
_codeql_build_dir/demo/: Makefile  cmake_install.cmake
_codeql_build_dir/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
demo/: CMakeLists.txt  README.md  arithmetic.h  camera_base.cpp  camera_wave.cpp  ege5star.cpp  ege_camera_base.cpp  ege_camera_wave.cpp  ege_function_visualization.cpp  ege_implicit_function_plot.cpp  ege_new_drawimage.cpp  ege_release.cmake  ege_sort_visualization.cpp  egearrow.cpp  egeclock.cpp  egedemo.cpp  egegomoku.cpp  egejulia.cpp  egelines.cpp  egerotatetransparent.cpp  egestar.cpp  egetetris.cpp  egetypegame.cpp  game_tetris.cpp  game_type.cpp  graph_alpha.cpp  graph_astar_pathfinding.cpp  graph_ball.cpp  graph_boids.cpp  graph_clock.cpp  graph_game_of_life.cpp  graph_kmeans.cpp  graph_light_pollution.cpp  graph_lines.cpp  graph_mouseball.cpp  graph_opengl_test.cpp  graph_star.cpp  graph_text_opengl.cpp  multiplesys_edit.cpp  test_demo.cpp  (+8 more)
demo/compile-tests/: MT_MD_mismatch.cpp
demo/gmp-demo/: MandelbrotSet.cpp  MandelbrotSetAni.cpp  MandelbrotSetAniLarge.cpp
demo/tools/: setup.cpp
demo/tutorial/: tutorial.cpp
doc/: Doxyfile  FINAL_SUMMARY.md  OPENGL_BACKEND.md  README.md  REFACTORING_SUMMARY.md  Release 25.11.md  Release-25.11.md
doc/html/html/: annotated.html  annotated_dup.js  classege_1_1MUSIC-members.html  classege_1_1MUSIC.html  classege_1_1MUSIC.js  classes.html  deprecated.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  ege_8zh__CN_8h.html  ege_8zh__CN_8h.js  ege_8zh__CN_8h__incl.map  ege_8zh__CN_8h__incl.md5  ege_8zh__CN_8h_source.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  graph_legend.html  group__CharacterInput.html  group__CharacterInput.js  group__CharacterInput.map  group__CharacterInput.md5  group__ColorConversion.html  group__ColorConversion.js  group__Console.html  group__Console.js  group__Console.map  group__EGEGDIPlus.html  group__EGEGDIPlus.js  group__EGEGDIPlus.map  group__FontSettings.html  group__FontSettings.js  group__FontSettings.map  group__FontSettings.md5  group__InputHandling.html  group__InputHandling.js  group__InputHandling.map  (+160 more)
doc/html/latex/: annotated.tex  classege_1_1MUSIC.tex  deprecated.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  ege_8zh__CN_8h.tex  ege_8zh__CN_8h__incl.md5  ege_8zh__CN_8h_source.tex  files.tex  group__CharacterInput.tex  group__ColorConversion.tex  group__Console.md5  group__Console.tex  group__EGEGDIPlus.md5  group__EGEGDIPlus.tex  group__FontSettings.tex  group__InputHandling.tex  group__KeyboardInput.md5  group__KeyboardInput.tex  group__MouseInput.tex  group__PathAdd.tex  group__PathManagement.md5  group__PathManagement.tex  (+23 more)
docs/: CROSS_PLATFORM.md
examples/: CMakeLists.txt  README.md  egelogo.rc  graph_sort_visualization.cpp  test_doubleclick.cpp
export/: ege.h
include/: ege.h  ege.zh_CN.h  ege_common.h  ege_def.h  ege_head.h  ege_math.h  graphics.h
include/ege/: button.h  camera.h  camera_capture.h  color.h  label.h  stdint.h  sys_edit.h  types.h
man/: README.md  api.md  index.htm
man/about/: index.htm
man/api/: index.htm
man/css/: index-table.css
man/intro/: index.htm
src/: CMakeLists.txt  array.h  camera.cpp  camera_capture.cpp  color.cpp  color.h  compress.cpp  console.cpp  crt_compat.cpp  debug.cpp  ege.h  ege_api.h  ege_common.h  ege_def.h  ege_dllimport.cpp  ege_dllimport.h  ege_extension.h  ege_gdiplus_fallback.cpp  ege_graph.h  ege_head.h  ege_math.h  ege_time.h  egecontrolbase.cpp  egegapi.cpp  encodeconv.cpp  encodeconv.h  enums.h  font.cpp  font.h  gdi_conv.cpp  gdi_conv.h  graphics.cpp  graphics.h  image.cpp  image.h  keyboard.cpp  keyboard.h  logo.cpp  math.cpp  message.cpp  (+17 more)
src/backend/: gdi_backend.cpp  gdi_backend.h  opengl_backend.cpp  opengl_backend.h  render_backend.cpp  render_backend.h
src/ege/: button.h  egecontrolbase.h  fps.h  label.h
src/renderer/: gdi_renderer.cpp  gdi_renderer.h  opengl_renderer.cpp  opengl_renderer.h  renderer_factory.cpp  renderer_interface.h
src/src/: array.h  color.h  debug.cpp  ege_api.h  ege_base.h  ege_common.h  ege_graph.h  ege_head.h  ege_math.h  egegapi.cpp  encodeconv.cpp  graphics.cpp  image.h  keyboard.cpp  message.h  sbt.h  set.h  time.cpp  type.h  utils.h
src/sync/: semaphore.cpp  semaphore.h
tests/: CMakeLists.txt  QUICKSTART.md  README.md  TEST_COVERAGE.md  image_generator.cpp  image_generator.h  performance_timer.cpp  performance_timer.h  putimage_alphablend_comprehensive_test.cpp  putimage_alphablend_test.cpp  putimage_basic_test.cpp  putimage_comparison_test.cpp  putimage_performance_test.cpp  putimage_rotate_test.cpp  putimage_transparent_test.cpp  run_tests.sh  test_framework.cpp  test_framework.h
tests/tests/: .clang-format  CMakeLists.txt  README.md  color_operations_test.cpp  drawing_performance_test.cpp  drawing_primitives_test.cpp  image_generator.h  image_management_test.cpp  pixel_operations_performance_test.cpp  putimage_alphablend_comprehensive_test.cpp  putimage_alphablend_test.cpp  putimage_basic_test.cpp  putimage_comparison_test.cpp  putimage_performance_test.cpp  putimage_rotate_test.cpp  putimage_transparent_test.cpp  run_putimage_comparison.sh  test_framework.cpp  window_management_test.cpp
utils/: .gitignore  deploy.sh  handle_utf8_encoding.sh  patch-locale.bat  release-mingw.sh  release-msvc.sh  release.sh  run-test-release-libs.sh  test-release-libs.sh  test-run-demos.sh
(+321 files in other folders)
